src/model/snapshots/rgr__model__item__tests__to_span_lines_with_base64_lossy_input_replacement-2.snap
---
source: src/model/item.rs
expression: new_item(RG_B64_JSON_END).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
