src/model/snapshots/rgr__model__item__tests__to_span_lines_with_base64_lossy_input_replacement-3.snap
---
source: src/model/item.rs
expression: new_item(RG_B64_JSON_MATCH).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "197:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "    �",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "Item",
                style: Style {
                    fg: Some(
                        Red,
                    ),
                    bg: None,
                    add_modifier: CROSSED_OUT,
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "foobar",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "::�new(",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "rg_msg",
                style: Style {
                    fg: Some(
                        Red,
                    ),
                    bg: None,
                    add_modifier: CROSSED_OUT,
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "foobar",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: ")",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
