src/model/snapshots/rgr__model__item__tests__to_span_lines_with_base64_lossy_selected.snap
---
source: src/model/item.rs
expression: new_item(RG_B64_JSON_BEGIN).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "./a/fo�o",
                style: Style {
                    fg: Some(
                        Black,
                    ),
                    bg: Some(
                        Yellow,
                    ),
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
