src/model/snapshots/rgr__model__item__tests__to_span_lines_with_multiline_matches.snap
---
source: src/model/item.rs
expression: new_item(RG_JSON_MATCH_MULTILINE).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "3:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "baz ",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "1",
                style: Style {
                    fg: Some(
                        Black,
                    ),
                    bg: Some(
                        Red,
                    ),
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "4:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "22",
                style: Style {
                    fg: Some(
                        Black,
                    ),
                    bg: Some(
                        Red,
                    ),
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "5:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "333",
                style: Style {
                    fg: Some(
                        Black,
                    ),
                    bg: Some(
                        Red,
                    ),
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: " bar ",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "4444",
                style: Style {
                    fg: Some(
                        Black,
                    ),
                    bg: Some(
                        Red,
                    ),
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
